Sonar cleanup for JDK 17 (#415)
Closes #414